--- a/tsconfig.json
+++ b/tsconfig.json
@@ -109,5 +109,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },  
   "include": ["src/**/*"],
+  "files": ["src/types/index.d.ts"],
   "exclude": ["node_modules", "**/*.test.ts"]
+ 
 }
