--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.12.0"
+    "mongodb": "^6.12.0",
+    "nodemailer": "^6.10.0",
+    "uuid": "^11.0.5"
   },
   "scripts": {
     "watch": "tsc -w",
