--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,7 +108,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },  
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "__test__"],
   "files": ["src/types/index.d.ts"],
   "exclude": ["node_modules", "**/*.test.ts"]
  
